# ChangeLog for sys-apps/zidrav4unix
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jul 2006; Josu López Fernández <zamorate@zamorate.net> ChangeLog:
  Respect correct CXX. Changed the way of respecting CXXFLAGS. Added ~amd64
  and ~ppc keywords

  21 Jun 2006; Alexandru Toma (analoguedragon) <flash3001@yahoo.com>
  ChangeLog:
  New ebuild for bug 53635
