@@ -1,4 +1,4 @@
 DIST zidrav4unix-1.2.0.tar.gz 18448 RMD160 7043b122e8e1f394d6fe62ea81ed08d0052a199b SHA1 e8e2e6574831509669bae3976748baec713243c6 SHA256 151218577d0088a578f3a52873e3615c2595674008fdac663f35bd2c2af6e91c
-EBUILD zidrav4unix-1.2.0.ebuild 606 RMD160 cf6d8e81bc99a7be6c9fa615add1f9454cb0c138 SHA1 7ec00cacfe50aa6903473b3263d4d7a3fbebf792 SHA256 7f0df94763a00ba3714bd01ae9ba503aeee8532340e76da559204144e8b4d042
-MISC ChangeLog 401 RMD160 d376247fae1ceca9b850461447a72f70762ccb08 SHA1 0483e89805cfb4cfb98af0249aa34e6ae88e75fb SHA256 5158207b368deff9f0e5c4e83a6f6144e6464ced5ba6954affd22fd980ce35db
+EBUILD zidrav4unix-1.2.0.ebuild 657 RMD160 1759752e301e230693dc92dea5cfc69a7d796858 SHA1 8dac499d3acca55803e7505e7a9292de88b92e27 SHA256 b4584e866569626ab45baf99a10137496605998ed4b5e88cf3d53730ec180d1a
+MISC ChangeLog 545 RMD160 c086aec256a97f232d2c11122790edf3a62a82bf SHA1 ac4f34534a1899b8e06f5b93b9934854a1c3b107 SHA256 e0e9e05ca7fad441a26a7cd92b920c471be6488a9f42ad49664680569504d8ae
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
